...
            .padding(16.dp),
        shape = RoundedCornerShape(20.dp),
        colors = CardDefaults.cardColors(containerColor = MaterialTheme.colorScheme.surfaceVariant)
    ) {
        Column(modifier = Modifier.padding(20.dp)) {
            Text(
                text = "THE JOURNAL",
                style = Typography.labelSmall,
                color = Primario,
                fontWeight = FontWeight.Bold
            )
            Spacer(modifier = Modifier.height(16.dp))
            Text(
...
                placeholder = "Email address"
            )

            Spacer(modifier = Modifier.height(16.dp))

            GradientButton(
                text = "Join Us",
                onClick = { /* Azione di iscrizione */ }
            )

            Spacer(modifier = Modifier.height(16.dp))

            // Immagine di interior design inclinata
...
